Fixed alignement of contact section

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -218,11 +218,11 @@
 
     .contact-item {
         font-size: 1rem;
-        justify-content: center;
-        text-align: center;
+        justify-content: flex-start;
+        text-align: left;
     }
 
     .contact-text {
-        text-align: center;
+        text-align: left;
     }
 }
